Fix expanding press icons issue on ie11

--- a/static/assets/Yves/styleguide/assets/scss/components/organisms/navbar/_navbar.scss
+++ b/static/assets/Yves/styleguide/assets/scss/components/organisms/navbar/_navbar.scss
@@ -85,6 +85,18 @@
     }
 }
 
+.navbar__press-icon--bild{
+    width: 17px;
+}
+
+.navbar__press-icon--ard{
+    width: 18px;
+}
+
+.navbar__press-icon--spiegel_inverted{
+    width: 95px;
+}
+
 
 .navbar__bottom{
     @include clearfix;
